# Tutti

./: Cargo.toml  README.md
src/: cache.json  main.rs  model_api.py  parser.rs
src/emotion_model/: catagorized_song_dataset.csv  model.py
src/utils/: gather_file_names.py
ui/: appwindow.slint
